# Study-mode-app

./: .env.example  .gitignore  README.md  clock.html  index.html  launch-study-mode.bat  package-lock.json  package.json  vite.config.ts
scripts/: create-desktop-shortcut.ps1  ensure-cargo-path.mjs
src/: main.ts  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs  main.rs
tasks/current tasks/: 2026-07-05_adding_to_startup.md
