[package]
name = "study-mode-app"
version = "0.1.0"
description = "A simple Study Mode desktop app"
authors = ["you"]
edition = "2021"

[lib]
name = "study_mode_app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-autostart = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
lettre = { version = "0.11", default-features = false, features = ["builder", "smtp-transport", "rustls-tls"] }
dotenvy = "0.15"

[profile.release]
codegen-units = 1
lto = true
opt-level = 3
panic = "abort"
strip = true
